--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "video_transcoder_backend_api",
+  "name": "prisma",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devStart": "npx tsc -b && node dist/index.js"
+    "seed": "npx tsc -b && node dist/seed.js"
+  },
+  "prisma": {
+    "seed": "npx tsc -b && node dist/seed.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1",
-    "prisma": "^5.14.0",
-    "redis": "^4.6.14",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/multer": "^1.4.11",
-    "@types/uuid": "^9.0.8"
+    "@prisma/client": "^5.14.0",
+    "prisma": "^5.14.0"
   }
 }
