--- a/api/package.json
+++ b/api/package.json
@@ -16,12 +16,14 @@
     "multer": "^1.4.5-lts.1",
     "prisma": "^5.14.0",
     "redis": "^4.6.14",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
-    "@types/uuid": "^9.0.8"
+    "@types/uuid": "^9.0.8",
+    "@types/ws": "^8.5.10"
   }
 }
