--- a/api/package.json
+++ b/api/package.json
@@ -11,18 +11,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^7.11.2",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "prisma": "^5.14.0",
     "redis": "^4.6.14",
     "uuid": "^9.0.1",
     "ws": "^8.17.0"
   },
   "devDependencies": {
+    "@types/cookie-session": "^2.0.49",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/multer": "^1.4.11",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/uuid": "^9.0.8",
     "@types/ws": "^8.5.10"
   }
