--- a/transcoder/package.json
+++ b/transcoder/package.json
@@ -11,8 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^7.11.2",
     "@types/express": "^4.17.21",
+    "axios": "^1.7.2",
     "child_process": "^1.0.2",
-    "redis": "^4.6.14"
+    "redis": "^4.6.14",
+    "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.8"
   }
 }
