--- a/api/package.json
+++ b/api/package.json
@@ -23,7 +23,8 @@
     "prisma": "^5.14.0",
     "redis": "^4.6.14",
     "uuid": "^9.0.1",
-    "ws": "^8.17.0"
+    "ws": "^8.17.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cookie-session": "^2.0.49",
