--- a/transcoder/package.json
+++ b/transcoder/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.21",
     "axios": "^1.7.2",
     "child_process": "^1.0.2",
+    "dotenv": "^16.4.5",
     "redis": "^4.6.14",
     "uuid": "^10.0.0"
   },
